--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,15 @@
-<footer class="site-footer">
+<footer>
+  <div class="container-fluid modal-footer">
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
+    <div class="container">
       <div class="footer-col  footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
+          <p class="contact-list"><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
       </div>
 
-    
-      <div class="footer-col  footer-col-3">
+      <div class="container">
         <p class="text">{{ site.description }}</p>
       </div>
+
     </div>
 
   </div>
