footer header work

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,11 @@
 <footer>
   <div class="container-fluid modal-footer">
 
-    <div class="container">
-      <div class="footer-col  footer-col-1">
-          <p class="contact-list"><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
-      </div>
-
       <div class="container">
-        <p class="text">{{ site.description }}</p>
+          <strong class="footer-text">Joseph Kim</strong><br>
+          <p class="contact-list"><a href="mailto:{{ site.email }}">joekim29@gmail.com</a></p>
+          <p class="footer-text">This Website Kills Facists</p>
       </div>
-
-    </div>
-
   </div>
 
 </footer>
