--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <title>Joseph Kim</title>
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
