--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+	<div class="container-fluid">
+		<p> Navbar Exists </p>
+		<img src="img/profile.jpg" class="img-responsive" alt="Responsive image">
+	</div>
 
 </html>
