--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<div class="container-fluid">
-		<p> Navbar Exists </p>
-		<img src="img/profile.jpg" class="img-responsive" alt="Responsive image">
-	</div>
-
+	<header>
+		<nav>
+			<div class="navbar-harvest navbar-fixed-top">
+				<div class="container-fluid">
+					<p> Navbar Exists </p>
+				</div>
+			</div>
+		</nav>
+	</header>
 </html>
