--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<div class="page-content">
+<div class="row">
 
   <header class="page-content">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
-  
+
 	<div class="container">
 	  <article class="container">
 	    {{ content }}
