--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<header>
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="navbar-header pull-left">
-		      <a class="navbar-brand" href="#">Title Here</a>
-		    </div>
-
-		    <div class="navbar-header pull-right">
-		      <button type="button" class="btn btn-default navbar-btn">Button 1</button>
-		      <button type="button" class="btn btn-default navbar-btn">Button 2</button>
-		  	</div>
+		<div class="container-fluid">
+			<div class="navbar navbar-default navbar-black navbar-fixed-top">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="javascript:void(0)">Home</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">About Me</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">Projects</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">Coming Soon</a>
+					</li>
+					<li>
+						<a href="javascript:void(0)">Credits</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</header>
 </html>
