--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
 
   <title>Joseph Kim</title>
 
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/custom.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/css/ripples.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/css/material-wfont.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-<!--   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->  
-  <link href="/css/ripples.min.css" rel="stylesheet">
-  <link href="/css/material-wfont.min.css" rel="stylesheet">
+  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+
 </head>
