--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,30 +4,32 @@
   {% include head.html %}
   {% include navbar.html %}
 
-  <body class="body-fixed">
+  <body class="body-fixed col-md-4 col-md-offset-4">
     <div class="container">
       <div class="row">
-        <img src="/img/profile.jpg" class="img-responsive" alt="Responsive image">
+        <img src="{{ site.baseurl }}/img/profile.jpg" class="img-responsive" alt="Responsive image">
         {{ content }}
       </div>
+
           <button type="button" class="btn-primary btn-material-blue-100">Button 1</button>
           <button type="button" class="btn-primary btn-material-blue-100">Button 2</button>
-      <div class="row">
-        <div class=" container">
+
+      <div class="container">
+          <div class="row">
             <h2>TEST</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="container">
+      <div class="container">
+          <div class="row">
             <h2>TEST</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
       </div>
 
-      <div class="row">
-        <div class="container">
+      <div class="container">
+          <div class="row">
             <h2>TEST</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
@@ -36,8 +38,8 @@
 
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="/js/ripples.min.js"></script>
-    <script src="/js/material.min.js"></script>
+    <script src="{{ site.baseurl }}/js/ripples.min.js"></script>
+    <script src="{{ site.baseurl }}/js/material.min.js"></script>
     <script>
     $(document).ready(function() {
         $.material.init();
@@ -47,7 +49,5 @@
   </body>
 
     {% include footer.html %}
-
-
 
 </html>
