--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <body class="body-fixed">
     <div class="container">
       <div class="row">
-        <img src="/img/profile.jpg" class="img-responsive" alt="Responsive image">
+        <img src="{{ site.baseurl }}/img/profile.jpg" class="img-responsive" alt="Responsive image">
         {{ content }}
       </div>
           <button type="button" class="btn-primary btn-material-blue-100">Button 1</button>
