--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,13 @@
 
   <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/ripples.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/material-wfont.min.css" rel="stylesheet">
-  <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+
 </head>
