--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <body class="body-fixed col-md-4 col-md-offset-4">
     <div class="container">
       <div class="row">
-        <img src="{{ site.baseurl }}/img/profile.jpg" class="img-responsive" alt="Responsive image">
+        <img src="img/profile.jpg" class="img-responsive" alt="Responsive image">
         {{ content }}
       </div>
 
