attempt to fix url issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
 
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="{{ site.baseurl }}/js/ripples.min.js"></script>
-    <script src="{{ site.baseurl }}/js/material.min.js"></script>
+    <script src="{{ site.url }}/js/ripples.min.js"></script>
+    <script src="{{ site.url }}/js/material.min.js"></script>
     <script>
     $(document).ready(function() {
         $.material.init();
