--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-<header>		
-<div class="navbar navbar-default">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="javascript:void(0)">Brand</a>
-    </div>
+<header>
+<div class="bs-component">		
+	<div class="navbar navbar-default navbar-fixed-top navbar-material-black" role="navigation">
+	    <div class="navbar-header">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	        </button>
+	        <a class="navbar-brand" href="javascript:void(0)">Brand</a>
+	    </div>
 
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="javascript:void(0)">Home</a></li>
-            <li><a href="javascript:void(0)">Link</a></li>
-            <li><a href="javascript:void(0)">News</a></li>
-            <li><a href="javascript:void(0)">Resume</a></li>
-            <li><a href="javascript:void(0)">Projects</a></li>
-        </ul>
-    </div>
+	    <div class="navbar-collapse collapse navbar-responsive-collapse">
+	        <ul class="nav navbar-nav">
+	            <li><a href="javascript:void(0)">Home</a></li>
+	            <li><a href="javascript:void(0)">Link</a></li>
+	            <li><a href="javascript:void(0)">News</a></li>
+	            <li><a href="javascript:void(0)">Resume</a></li>
+	            <li><a href="javascript:void(0)">Projects</a></li>
+	        </ul>
+	    </div>
+	</div>
 </div>
 </header>
 </html>
