--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <html>
 <header>
 <div class="bs-component">		
-	<div class="navbar navbar-default navbar-fixed-top navbar-material-black" role="navigation">
+	<div class="navbar navbar-default navbar-fixed-top navbar-material-grey-900" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 	            <span class="icon-bar"></span>
