started links to other pages

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,10 +14,12 @@
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
-	            <li><a href="javascript:void(0)">Home</a></li>
-	            <li><a href="javascript:void(0)">News</a></li>
-	            <li><a href="javascript:void(0)">Resume</a></li>
-	            <li><a href="javascript:void(0)">Projects</a></li>
+	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
+	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
+	            <li><a href="{{ site.baseurl }}/projects/index.html">Projects</a></li>
+	            <li><a href="javascript:void(0)">About</a></li>
+	            <li><a href="javascript:void(0)">Credits</a></li>
 	        </ul>
 	    </div>
 	</div>
