--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <header>
-<div class="bs-component">		
+<div class="container-fluid">		
 	<div class="navbar navbar-default navbar-fixed-top navbar-material-grey-900 navbar-fixed-margin" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
