--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 
   {% include head.html %}
+  {% include header.html %}
   {% include navbar.html %}
 
   <body class="body-fixed">
@@ -13,7 +14,7 @@
 
     <script src="{{ site.baseurl }}/js/ripples.min.js"></script>
     <script src="{{ site.baseurl }}/js/material.min.js"></script>
-    
+
     <script>
       $(document).ready(function() {
           $.material.init();
