--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,14 @@ layout: default
 ---
 <div class="row">
 
-  <header class="page-content">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+    <div class="container">
+      <div class="well page active">
 
-	<div class="container">
-	  <article class="container">
-	    {{ content }}
-	  </article>
-	</div>
+        <h1 class="post-title">{{ page.title }}</h1>
+    	<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 
+        <p> {{ content }}</p>
+
+      </div>
+    </div> 
 </div>
