--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<header>
-<div class="container">		
-	<div class="navbar navbar-default navbar-fixed-top navbar-material-grey-900 navbar-fixed-margin shadow-z-3" role="navigation">
+<div class="container-fluid">		
+<div class="row">
+	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed-margin shadow-z-3" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 	            <span class="icon-bar"></span>
@@ -18,11 +18,11 @@
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
 	            <li><a href="{{ site.baseurl }}/projects/index.html">Projects</a></li>
-	            <li><a href="javascript:void(0)">About</a></li>
-	            <li><a href="javascript:void(0)">Credits</a></li>
+	            <li><a href="{{ site.baseurl }}/about/index.html">About</a></li>
+	            <li><a href="{{ site.baseurl }}/credits/index.html">Credits</a></li>
 	        </ul>
 	    </div>
 	</div>
 </div>
-</header>
+</div>
 </html>
