--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,21 +6,22 @@
   {% include navbar.html %}
 
   <body class="body-fixed">
-  
     {{ content }}
 
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    
+    <script src="/code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <script src="{{ site.baseurl }}/js/ripples.min.js"></script>
     <script src="{{ site.baseurl }}/js/material.min.js"></script>
 
     <script>
       $(document).ready(function() {
-          $.material.init();
+        $.material.init();
       });
     </script>
 
   </body>
+
   {% include footer.html %}
 </html>
