--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <footer>
 	<div class="container-fluid">
+	  <div class="row">
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 	        <strong class="roboto-white">Joseph Kim</strong><br>
 	        <p class="contact-list"><a href="mailto:{{ site.email }}">joekim29@gmail.com</a></p>
 	        <p class="roboto-white">This Website Kills Facists</p>
 		  </div>
+	  </div>
 	</div>
 </footer>
