--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <div class="container-fluid">		
+<div class="row">
 	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed-margin shadow-z-3" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -21,6 +22,7 @@
 	            <li><a href="{{ site.baseurl }}/credits/index.html">Credits</a></li>
 	        </ul>
 	    </div>
+	</div>
 </div>
 </div>
 </html>
