added background image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 	        <strong class="roboto-white">Joseph Kim</strong><br>
 	        <p class="contact-list"><a href="mailto:{{ site.email }}">joekim29@gmail.com</a></p>
-	        <p class="roboto-white">This Website Kills Facists</p>
+	        <p class="roboto-white">This Website Kills Fascists</p>
 		  </div>
 	  </div>
 	</div>
