--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,11 @@
-<header>
-   <div class="bg">
-  </div>
-</header>
+<div class="bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10">
+                <h1 class="header-name">
+                Joseph Kim
+         		</h1>
+            </div>
+        </div>
+    </div>
+</div>
