other layout changes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <html>
 <div class="container-fluid">		
 <div class="row">
-	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed-margin shadow-z-3" role="navigation">
+	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed-margin navbar-static-top shadow-z-3" role="navigation" id="topnavbar">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 	            <span class="icon-bar"></span>
@@ -14,7 +14,12 @@
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
-	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+	            <li>
+			        <div class="icon-preview">
+			            <i class="mdi-maps-store-mall-directory"></i>
+		            </div>
+		            <a href="{{ site.baseurl }}/index.html" class="pull-right">Home</a>
+	            </li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
 	            <li><a href="{{ site.baseurl }}/projects/index.html">Projects</a></li>
