--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<div class="bg">
-    <div class="container">
-        <div class="row">
+ <div class="container-fluid" id="banner">
+    <div class="row">
+        <div class="bg">
             <div class="col-md-10">
                 <h1 class="header-name">
                 Joseph Kim
