--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
 	            <li>
-			        <div class="icon-preview">
+			        <div class="icon-preview center-icon">
 			            <i class="mdi-maps-store-mall-directory"></i>
 		            </div>
 		            <a href="{{ site.baseurl }}/index.html" class="pull-right">Home</a>
@@ -24,7 +24,6 @@
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
 	            <li><a href="{{ site.baseurl }}/projects/index.html">Projects</a></li>
 	            <li><a href="{{ site.baseurl }}/about/index.html">About</a></li>
-	            <li><a href="{{ site.baseurl }}/credits/index.html">Credits</a></li>
 	        </ul>
 	    </div>
 	</div>
