--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
  <div class="container-fluid" id="banner">
     <div class="row">
         <div class="bg">
-            <div class="col-md-10">
+            <div class="col-md-12">
                 <h1 class="header-name">
-                Joseph Kim
+                Joseph <strong>Kim</strong>
          		</h1>
             </div>
         </div>
