--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include header.html %}
   {% include navbar.html %}
 
-<body>
+<body class="main-content">
     {{ content }}
 
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
