--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
- <div class="container-fluid" id="banner">
+ <div class="container-fluid nav-padding" id="banner">
     <div class="row">
         <div class="bg">
             <div class="col-md-12">
