work on about page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,9 +14,9 @@
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
 	            <li>
-			        <div class="icon-preview center-icon">
+<!-- 			        <div class="icon-preview center-icon">
 			            <i class="mdi-maps-store-mall-directory"></i>
-		            </div>
+		            </div> -->
 		            <a href="{{ site.baseurl }}/index.html" class="pull-right">Home</a>
 	            </li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
