--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
- <div class="container-fluid nav-padding" id="banner">
-    <div class="row">
-        <div class="bg">
-            <div class="col-md-12">
-                <h1 class="header-name">
-                Joseph <strong>Kim</strong>
-         		</h1>
-            </div>
-        </div>
-    </div>
-</div>
+ <header>
+	 <div class="container-fluid top-padding" id="banner">
+	    <div class="bg">
+	        <h1 class="header-name pull-left">
+	        Joseph <strong>Kim</strong>
+	 		</h1>
+	    </div>
+	</div>
+</header>
