--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
 <div class="container-fluid">		
-<div class="row">
-	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed-margin navbar-static-top shadow-z-3" role="navigation" id="topnavbar">
+	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed navbar-fixed-top shadow-z-3" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 	            <span class="icon-bar"></span>
@@ -13,19 +10,11 @@
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
-	            <li>
-<!-- 			        <div class="icon-preview center-icon">
-			            <i class="mdi-maps-store-mall-directory"></i>
-		            </div> -->
-		            <a href="{{ site.baseurl }}/index.html" class="pull-right">Home</a>
-	            </li>
+	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
 	            <li><a href="{{ site.baseurl }}/projects/index.html">Projects</a></li>
 	            <li><a href="{{ site.baseurl }}/about/index.html">About</a></li>
 	        </ul>
 	    </div>
-	</div>
-</div>
-</div>
-</html>
+	</div></div>
