--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
  <header>
-	 <div class="container-fluid top-padding" id="banner">
+	 <div class="container-fluid top-padding navbar-fixed" id="banner">
 	    <div class="bg">
-	        <h1 class="header-name pull-left">
-	        Joseph <strong>Kim</strong>
-	 		</h1>
+	        <div class="roboto-white">
+	        	<h1 class="header-name">Joseph <strong>Kim</strong></h1>
+	 		</div>
 	    </div>
 	</div>
 </header>
