--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% include header.html %}
 
 
-<body class="main-content">
+<body>
     {{ content }}
 
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
