--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,7 @@
- <header>
-	 <div class="container-fluid top-padding navbar-fixed" id="banner">
-	    <div class="bg shadow-z-2">
-	        <div class="roboto-white">
-	        	<h1 class="header-name">Joseph <strong>Kim</strong></h1>
-	 		</div>
+<header class="container-fluid navbar-fixed" id="banner">
+ 	<div class="row">
+ 		<div class="bg shadow-z-2">
+	    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
 	    </div>
-	</div>
+	</hdiv>
 </header>
