--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,8 @@
-<div class="container-fluid">		
-	<div class="navbar navbar-default navbar-material-grey-900 navbar-fixed navbar-fixed-top shadow-z-3" role="navigation">
+<nav class="navbar navbar-default navbar-material-grey-900 navbar-fixed navbar-fixed-top shadow-z-3" role="navigation">
+	<div class="container-fluid">
+
 	    <div class="navbar-header">
-	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
@@ -9,7 +10,7 @@
 	    </div>
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-	        <ul class="nav navbar-nav">
+	        <ul class="nav navbar-nav navbar-right">
 	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
@@ -17,4 +18,6 @@
 	            <li><a href="{{ site.baseurl }}/about/index.html">About</a></li>
 	        </ul>
 	    </div>
-	</div></div>
+
+	</div>
+</nav>
