added some color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<header class="container-fluid navbar-fixed" id="banner">
+<div class="container-fluid">
  	<div class="row">
- 		<div class="bg shadow-z-2">
+ 		<div class="bg shadow-z-3">
 	    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
 	    </div>
-	</hdiv>
-</header>
+	</div>
+</div>
