--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,12 @@
 	  <div class="row">
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 
-			  	<div class="footer-social">
-				  	<li class="footer-icons">
-				  		<ul><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></ul>
-					  	<ul><a href="http://www.linkedin.com"><img src="../img/social_media/With Border/linkedin-variation.png"></ul>
-					  	<ul><a href="http://www.facebook.com"><img src="../img/social_media/With Border/facebook-variation.png"></ul>
-					  	<ul><a href="http://www.github.com"><img src="../img/social_media/With Border/github.png"></ul>
-					</li>
-				</div>
+		  	<ul class="footer-icons">
+		  		<ul><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></ul>
+			  	<ul><a href="http://www.linkedin.com"><img src="../img/social_media/With Border/linkedin-variation.png"></ul>
+			  	<ul><a href="http://www.facebook.com"><img src="../img/social_media/With Border/facebook-variation.png"></ul>
+			  	<ul><a href="http://www.github.com"><img src="../img/social_media/With Border/github.png"></ul>
+			</ul>
 
 	        <strong class="roboto-white">Joseph Kim</strong><br>
 	        <p class="roboto-white">This Website Kills Fascists</p>
