--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
 
   <title>Joseph Kim</title>
 
-  <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
+<!--   <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet"> -->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
-
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  
   <link href="{{ site.baseurl }}/css/ripples.min.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/material-wfont.min.css" rel="stylesheet">
 
