--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" id="header-image">
  	<div class="row">
  		<div class="bg shadow-z-3">
 	    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
