--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<div class="container-fluid" id="header-image">
- 	<div class="row">
- 		<div class="bg shadow-z-3">
+<div class="container-fluid bg" id="header-image">
+ 	<div class="row shadow-z-3">
+ 		<div>
 	    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
 	    </div>
 	</div>
