--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
 	    </div>
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-	        <ul class="nav navbar-nav navbar-right">
+	        <ul class="nav navbar-nav navbar-right nav-text">
 	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
 	            <li><a href="{{ site.baseurl }}/resume/index.html">Resume</a></li>
