added responsive utility

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 		  		<ul><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></ul>
 			  	<ul><a href="http://www.linkedin.com"><img src="../img/social_media/With Border/linkedin-variation.png"></ul>
 			  	<ul><a href="http://www.facebook.com"><img src="../img/social_media/With Border/facebook-variation.png"></ul>
-			  	<ul><a href="http://www.github.com"><img src="../img/social_media/With Border/github.png"></ul>
+			  	<ul><a href="https://github.com/nikolaevarius/"><img src="../img/social_media/With Border/github.png"></ul>
 			</ul>
 
 	        <strong class="roboto-white">Joseph Kim</strong><br>
