--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,9 +7,11 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	        </button>
+	        <a class="navbar-brand hidden-lg hidden-md" href="javascript:void(0)">Joseph Kim<div class="ripple-wrapper"></div></a>
 	    </div>
 
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
+
 	        <ul class="nav navbar-nav navbar-right nav-text">
 	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
