--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,13 @@
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 
 		  	<ul class="footer-icons">
-		  		<ul><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></ul>
-			  	<ul><a href="http://www.linkedin.com"><img src="../img/social_media/With Border/linkedin-variation.png"></ul>
-			  	<ul><a href="http://www.facebook.com"><img src="../img/social_media/With Border/facebook-variation.png"></ul>
-			  	<ul><a href="https://github.com/nikolaevarius/"><img src="../img/social_media/With Border/github.png"></ul>
+		  		<li><a href="mailto:{{ site.email }}"><img src="../img/social_media/With Border/email-variation.png"></li>
+			  	<li><a href="https://www.linkedin.com/in/joekim29"><img src="../img/social_media/With Border/linkedin-variation.png"></li>
+			  	<li><a href="https://github.com/nikolaevarius/"><img src="../img/social_media/With Border/github.png"></li>
 			</ul>
 
-	        <strong class="roboto-white">Joseph Kim</strong><br>
-	        <p2 class="roboto-white">This Website Kills Fascists</p2>
+	        <strong class="roboto-white footer-text">Joseph Kim</strong><br>
+	        <p2 class="roboto-white footer-text">This Website Kills Fascists</p2>
 		  </div>
 	</div>
 </footer>
