--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,5 @@
-<div class="container-fluid bg" id="header-image">
- 	<div class="row shadow-z-3">
- 		<div>
-	    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
-	    </div>
-	</div>
+<div class="container-fluid bg row shadow-z-3" id="header-image">
+	<div>
+    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
+    </div>
 </div>
