fixed header img

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,18 +10,25 @@
 
 
 
- 
+    <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> 
     <script src="{{ site.baseurl }}/js/ripples.min.js"></script>
     <script src="{{ site.baseurl }}/js/material.min.js"></script>
     <script src="{{ site.baseurl }}/js/custom.js"></script>
+
+
+
 
     <script>
       $(document).ready(function() {
         $.material.init();
       });
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>   
     </script>
+   
+  
+  
 </body>
   {% include footer.html %}
 </html>
