--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<div class="container-fluid nav-padding">
-	  <div class="row">
+	  	<div class="row">
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 
 		  	<ul class="footer-icons">
@@ -12,5 +12,6 @@
 	        <strong class="roboto-white footer-text">Joseph Kim</strong><br>
 	        <p2 class="roboto-white footer-text">This Website Kills Fascists</p2>
 		  </div>
+		</div>
 	</div>
 </footer>
