--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg row shadow-z-3" id="header-image">
 	<div>
-    	<h1 class="header-name roboto-white">Joseph <strong>Kim</strong></h1>
+    	<h1 class="header-name roboto-white"> >> Joseph <strong>Kim</strong></h1>
     </div>
 </div>
