lots of changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
   </ul> -->
 
 	        <strong class="roboto-white footer-text">Joseph Kim</strong><br>
-	        <p2 class="roboto-white footer-text">This Website Kills Fascists</p2>
+	        <!--<p2 class="roboto-white footer-text">This Website Kills Fascists</p2>-->
 		  </div>
 		</div>
 	</div>
