--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- Posts Page -->
 <div class="container content-padding ">
     <div class="row">
       <div class="well page active">
