--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<!-- Header -->
 <div class="container-fluid bg row shadow-z-3" id="header-image">
 	<div>
     	<h1 class="header-name roboto-white"> >> Joseph <strong>Kim</strong></h1>
