--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 
 	        <strong class="roboto-white footer-text">Joseph Kim</strong><br>
-	        <!--<p2 class="roboto-white footer-text">This Website Kills Fascists</p2>-->
+	        <!--<p2 class="roboto-white footer-text">This Website was made po/p2>-->
 		  </div>
 		</div>
 	</div>
