--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-	<div class="container-fluid nav-padding">
+	<div class="container-fluid">
 	  	<div class="row">
 		  <div class="modal-footer navbar-fixed-margin navbar-static-bottom">
 
