started work on interactive portion of resume

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,8 +10,8 @@
 	        <a class="navbar-brand hidden-lg hidden-md" href="javascript:void(0)">Joseph Kim<div class="ripple-wrapper"></div></a>
 	    </div>
 
+	    <!-- Collapsable navbar -->
 	    <div class="navbar-collapse collapse navbar-responsive-collapse">
-
 	        <ul class="nav navbar-nav navbar-right nav-text">
 	            <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 	            <li><a href="{{ site.baseurl }}/news/index.html">News</a></li>
@@ -19,6 +19,6 @@
 	            <li><a href="{{ site.baseurl }}/about/index.html">About</a></li>
 	        </ul>
 	    </div>
-
+ <!-- Collapsable navbar -->
 	</div>
 </nav>
